# ean

./: .gitignore  CMakeLists.txt  Interval.h  MainWindow.cpp  MainWindow.h  MatrixInputWidget.cpp  MatrixInputWidget.h  Parser.cpp  Parser.h  Solver.cpp  Solver.h  main.cpp  polecenie.txt  solver_gui.pro
